# cudaRaytracing

./: .clang-tidy  CMakeLists.txt  README.md  imgui.ini
src/: CMakeLists.txt  aggregates.cpp  aggregates.h  camera.h  common.h  cudaRenderer.cu  cudaRenderer.h  hittable.h  hittable_list.h  interop.cpp  just_test.cpp  main.cpp  main.cu  main.h  material.cpp  material.h  primitive.cpp  primitive.h  ray.h  renderer.cpp  renderer.h  scene.cpp  scene.h  shape.cpp  shape.h  sphere.h  stb.cpp
src/common/: CudaArray.h  CudaMath.h  CudaUtils.h
